--- a/layout/style.css
+++ b/layout/style.css
@@ -9,12 +9,18 @@
 .navbar-minimalist img {
  height: 100px;
 }
+
+.navbar-minimalist img:hover{
+	transform: scale(1.1);
+    transition-duration: 400ms;
+}
 .card {
  background-size: cover;
  background-position: center;
  height: 150px;
  border-radius: 1px;
  margin: 5px;
+ margin-top: 20px;
  box-shadow: 0 0 10px rgba(0,0,0,0.2);
  display: flex;
  align-items: center;
@@ -34,7 +40,7 @@
 
 .map{
   flex: 1;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .map-layout{
