--- a/layout/layout.html
+++ b/layout/layout.html
@@ -51,14 +51,14 @@
  </div>
 
  <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="card" style="background-image: url(https://voyages.michelin.fr/sites/default/files/styles/poi_slideshow/public/images/travel_guide/voyage_media-NX-17806/terrasses-de-la-cathedrale-de-milan.jpg?itok=DjosbnIX)">
-            Milan
+      <div class="card" style="background-image: url(http://www.professionvoyages.com/wp-content/uploads/2017/08/HAWAII.jpg)">
+            Hawaii
       </div>
  </div>
  
  <div class="col-xs-12 col-sm-6 col-md-3">
-   <div class="card" style="background-image: url(https://media.routard.com/image/81/3/venise-grand-canal.1479813.142.jpg)">
-         Venise
+   <div class="card" style="background-image: url(https://scdn3.thomascook.com/crop?imageUrl=http://magnolia.production.thomascook.io/wcms/dam/necbe/exp/hero-barcelona.jpg&maxWidth=1366&maxHeight=0)">
+         Barcelone
    </div>
  </div>
 
